force-app/main/default/objects/Event__c/fields/Mobile_Event_Manager__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Event_Manager__c</fullName>
    <description>Number of mobile event managers required (one-time event)</description>
    <inlineHelpText>Number of mobile event managers required (one-time event)</inlineHelpText>
    <label>Mobile Event Manager Required*</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>