force-app/main/default/objects/Event__c/fields/Mobile_Event_Manager_Arrive__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Event_Manager_Arrive__c</fullName>
    <label>Mobile Event Manager Arrive*</label>
    <type>TextArea</type>
</CustomField>