force-app/main/default/objects/Event__c/fields/Mobile_Event_Manager_Finish__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Event_Manager_Finish__c</fullName>
    <label>Mobile Event Manager Finish*</label>
    <type>TextArea</type>
</CustomField>