force-app/main/default/objects/Event__c/fields/New_Event_Ding_Notes__c.field-meta.xml
<CustomField>
    <fullName>New_Event_Ding_Notes__c</fullName>
    <label>Event Ding Notes</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>