force-app/main/default/objects/Event__c/fields/Number_of_check_in_devices__c.field-meta.xml
<CustomField>
    <fullName>Number_of_check_in_devices__c</fullName>
    <description>Number of tablets required for check-in and/or payment processing ; these tablets will be used by staff and volunteers</description>
    <inlineHelpText>Number of tablets required for check-in and/or payment processing ; these tablets will be used by staff and volunteers</inlineHelpText>
    <label>No of iPads &amp; Readers - sent w staff*</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>