force-app/main/default/objects/Event__c/fields/Number_of_credit_card_swipers__c.field-meta.xml
<CustomField>
    <fullName>Number_of_credit_card_swipers__c</fullName>
    <description>Number of credit card swipers required</description>
    <inlineHelpText>Number of credit card swipers required</inlineHelpText>
    <label>No. of payment readers - sent w/ staff</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>