force-app/main/default/objects/Event__c/fields/Number_of_Donated_Items__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Donated_Items__c</fullName>
    <label># of contracted Donated Items</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>