force-app/main/default/objects/Event__c/fields/Number_of_Givergy_lots_live__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Givergy_lots_live__c</fullName>
    <label># of contracted Givergy lots - live*</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>