force-app/main/default/objects/Event__c/fields/Number_of_Givergy_lots_silent__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Givergy_lots_silent__c</fullName>
    <label># of contracted Givergy lots - silent*</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>