force-app/main/default/objects/Event__c/fields/Number_of_guests__c.field-meta.xml
<CustomField>
    <fullName>Number_of_guests__c</fullName>
    <label>Number of guests*</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>