force-app/main/default/objects/Event__c/fields/Number_of_pods__c.field-meta.xml
<CustomField>
    <fullName>Number_of_pods__c</fullName>
    <label>Number of bidding stations*</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>