force-app/main/default/objects/Event__c/fields/Number_of_screens_owr__c.field-meta.xml
<CustomField>
    <fullName>Number_of_screens_owr__c</fullName>
    <label>OWR number of screens</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>