force-app/main/default/objects/Event__c/fields/Number_of_spare_tablets__c.field-meta.xml
<CustomField>
    <fullName>Number_of_spare_tablets__c</fullName>
    <description>Extra tablets for guests using the Givergy app (table tablets)</description>
    <inlineHelpText>Extra tablets for guests using the Givergy app (table tablets)</inlineHelpText>
    <label>Number of spare Givergy table tablets</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>