force-app/main/default/objects/Event__c/fields/Number_of_Staff_Booked__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Staff_Booked__c</fullName>
    <label>Staff Booked</label>
    <summaryFilterItems>
        <field>Staff__c.Role__c</field>
        <operation>equals</operation>
        <value>Event Manager, Event Support, Tech Manager, Tech Support, Remote Support, Training Manager, Mobile Event Manager</value>
    </summaryFilterItems>
    <summaryForeignKey>Staff__c.Event__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>