force-app/main/default/objects/Event__c/fields/Number_of_Staff_Required__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Staff_Required__c</fullName>
    <formula>Event_Manager__c+Event_Support__c+Tech_Manager__c+Tech_Support__c+Remote_support_required__c+Mobile_Event_Manager__c+Tech_Manager_Shadow__c+Event_Manager_Shadow__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>All Staff Required*</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>