force-app/main/default/objects/Event__c/fields/Number_of_tables__c.field-meta.xml
<CustomField>
    <fullName>Number_of_tables__c</fullName>
    <label>Number of tables*</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>