force-app/main/default/objects/Event__c/fields/Number_of_tablet_stands__c.field-meta.xml
<CustomField>
    <fullName>Number_of_tablet_stands__c</fullName>
    <label>Number of tablet stands*</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>