force-app/main/default/objects/Event__c/fields/Number_of_tablets__c.field-meta.xml
<CustomField>
    <fullName>Number_of_tablets__c</fullName>
    <description>Number of tablets for guests using table tablets</description>
    <inlineHelpText>Number of tablets for guests using table tablets</inlineHelpText>
    <label>No. of table tablets*</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>