force-app/main/default/objects/Event__c/fields/of_contracted_Givergy_Lots_Premium__c.field-meta.xml
<CustomField>
    <fullName>of_contracted_Givergy_Lots_Premium__c</fullName>
    <label># of contracted Givergy Lots - Premium</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>