force-app/main/default/objects/Event__c/fields/of_Guests_That_Made_a_Payment__c.field-meta.xml
<CustomField>
    <fullName>of_Guests_That_Made_a_Payment__c</fullName>
    <label># of Guests That Made a Payment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>