force-app/main/default/objects/Event__c/fields/of_guests_who_gave__c.field-meta.xml
<CustomField>
    <fullName>of_guests_who_gave__c</fullName>
    <description># Guests who gave (Won an item, donation, ticket – Simply they had a bill to pay)</description>
    <inlineHelpText># Guests who gave (Won an item, donation, ticket – Simply they had a bill to pay)</inlineHelpText>
    <label># of guests who gave</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>