force-app/main/default/objects/Event__c/fields/of_guests_who_made_a_donation__c.field-meta.xml
<CustomField>
    <fullName>of_guests_who_made_a_donation__c</fullName>
    <label># of guests who made a donation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>