force-app/main/default/objects/Event__c/fields/of_guests_who_won_an_auction_item__c.field-meta.xml
<CustomField>
    <fullName>of_guests_who_won_an_auction_item__c</fullName>
    <label># of guests who won an auction item</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>