force-app/main/default/objects/Event__c/fields/of_microphones__c.field-meta.xml
<CustomField>
    <fullName>of_microphones__c</fullName>
    <label># of microphones</label>
    <length>18</length>
    <type>Text</type>
</CustomField>