force-app/main/default/objects/Event__c/fields/of_tickets_sold__c.field-meta.xml
<CustomField>
    <fullName>of_tickets_sold__c</fullName>
    <label># of tickets sold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>