force-app/main/default/objects/Event__c/fields/of_Tips__c.field-meta.xml
<CustomField>
    <fullName>of_Tips__c</fullName>
    <inlineHelpText>Number of tips received from donors</inlineHelpText>
    <label># of Tips</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>