force-app/main/default/objects/Event__c/fields/Offline_Ticket_Sales__c.field-meta.xml
<CustomField>
    <fullName>Offline_Ticket_Sales__c</fullName>
    <label># offline tickets sold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>