force-app/main/default/objects/Event__c/fields/One_time_update__c.field-meta.xml
<CustomField>
    <fullName>One_time_update__c</fullName>
    <defaultValue>false</defaultValue>
    <label>One time update</label>
    <type>Checkbox</type>
</CustomField>