force-app/main/default/objects/Event__c/fields/Online_Auction__c.field-meta.xml
<CustomField>
    <fullName>Online_Auction__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Online Auction</label>
    <type>Checkbox</type>
</CustomField>