force-app/main/default/objects/Event__c/fields/Online_Auction_Ding_Display__c.field-meta.xml
<CustomField>
    <fullName>Online_Auction_Ding_Display__c</fullName>
    <formula>if(Website__c,&quot;Yes&quot;,&quot;No&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Online Auction Ding Display</label>
    <type>Text</type>
</CustomField>