force-app/main/default/objects/Event__c/fields/Onsite_Services__c.field-meta.xml
<CustomField>
    <fullName>Onsite_Services__c</fullName>
    <label>Onsite Services</label>
    <length>18</length>
    <type>Text</type>
</CustomField>