force-app/main/default/objects/Event__c/fields/Other_Fundraising_Activities__c.field-meta.xml
<CustomField>
    <fullName>Other_Fundraising_Activities__c</fullName>
    <label>Other Fundraising Activities Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>