force-app/main/default/objects/Event__c/fields/Other_Staff_Booked__c.field-meta.xml
<CustomField>
    <fullName>Other_Staff_Booked__c</fullName>
    <label>Other Staff Booked</label>
    <type>TextArea</type>
</CustomField>