force-app/main/default/objects/Event__c/fields/OWR_Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>OWR_Invoice_Number__c</fullName>
    <label>OWR Invoice Number</label>
    <type>TextArea</type>
</CustomField>