force-app/main/default/objects/Event__c/fields/OWR_Service__c.field-meta.xml
<CustomField>
    <fullName>OWR_Service__c</fullName>
    <label>OWR Service</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Delivery / drop off only</fullName>
                <label>Drop off / Collection</label>
            </value>
            <value>
                <fullName>Set up and packdown</fullName>
            </value>
            <value>
                <fullName>Complete service</fullName>
            </value>
            <value>
                <fullName>Complete service (Hybrid)</fullName>
            </value>
            <value>
                <fullName>Kru TM drop off / pick up from OWR</fullName>
                <label>Kru TM dropping off &amp; picking up from OWR</label>
            </value>
            <value>
                <fullName>Kru SUPD</fullName>
            </value>
            <value>
                <fullName>Kru Scottish TM delivering event from Givergy lock up</fullName>
            </value>
            <value>
                <fullName>No OWR required (online or Pro)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>