force-app/main/default/objects/Event__c/fields/OWR_Service_New__c.field-meta.xml
<CustomField>
    <fullName>OWR_Service_New__c</fullName>
    <formula>IF(Tech_Manager__c=0,&quot;No OWR service required&quot;,&quot;Complete service&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OWR Service - New</label>
    <type>Text</type>
</CustomField>