force-app/main/default/objects/Event__c/fields/P2P__c.field-meta.xml
<CustomField>
    <fullName>P2P__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if the event featured peer-to-peer fundraising</description>
    <inlineHelpText>Check if the event featured peer-to-peer fundraising</inlineHelpText>
    <label>P2P</label>
    <type>Checkbox</type>
</CustomField>