force-app/main/default/objects/Event__c/fields/Pardot_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Pardot_Campaign__c</fullName>
    <label>Pardot Campaign</label>
    <type>TextArea</type>
</CustomField>