force-app/main/default/objects/Event__c/fields/Partner_Auction_Item_Commission__c.field-meta.xml
<CustomField>
    <fullName>Partner_Auction_Item_Commission__c</fullName>
    <label>Partner Auction Item Commission</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>