force-app/main/default/objects/Event__c/fields/Pass_on_payment_fee__c.field-meta.xml
<CustomField>
    <fullName>Pass_on_payment_fee__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Pass on payment fee to guests</label>
    <type>Checkbox</type>
</CustomField>