force-app/main/default/objects/Event__c/fields/Payment_collection__c.field-meta.xml
<CustomField>
    <fullName>Payment_collection__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payment collection</label>
    <type>Checkbox</type>
</CustomField>