force-app/main/default/objects/Event__c/fields/Payment_collection_end__c.field-meta.xml
<CustomField>
    <fullName>Payment_collection_end__c</fullName>
    <label>Payment Desk End*</label>
    <length>50</length>
    <type>Text</type>
</CustomField>