force-app/main/default/objects/Event__c/fields/Payment_collection_start__c.field-meta.xml
<CustomField>
    <fullName>Payment_collection_start__c</fullName>
    <label>Payment Desk Start*</label>
    <length>50</length>
    <type>Text</type>
</CustomField>