force-app/main/default/objects/Event__c/fields/Payment_Cost__c.field-meta.xml
<CustomField>
    <fullName>Payment_Cost__c</fullName>
    <label>Fintech Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>