force-app/main/default/objects/Event__c/fields/Payment_desk_location__c.field-meta.xml
<CustomField>
    <fullName>Payment_desk_location__c</fullName>
    <label>Payment desk location*</label>
    <length>255</length>
    <type>Text</type>
</CustomField>