force-app/main/default/objects/Event__c/fields/Payment_Ding_Display__c.field-meta.xml
<CustomField>
    <fullName>Payment_Ding_Display__c</fullName>
    <formula>if(Payment_collection__c,&quot;Yes&quot;,&quot;No&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Ding Display</label>
    <type>Text</type>
</CustomField>