force-app/main/default/objects/Event__c/fields/Payment_fees__c.field-meta.xml
<CustomField>
    <fullName>Payment_fees__c</fullName>
    <description>Total payment fees, platform fees &amp; value of tips processed by Givergy</description>
    <inlineHelpText>Total payment fees, platform fees &amp; value of tips processed by Givergy</inlineHelpText>
    <label>Payment Fees (Synced)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>