force-app/main/default/objects/Event__c/fields/Payment_manager__c.field-meta.xml
<CustomField>
    <fullName>Payment_manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Events3</relationshipName>
    <type>Lookup</type>
</CustomField>