force-app/main/default/objects/Event__c/fields/Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method__c</fullName>
    <label>Payment Model</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>platform_fees</fullName>
                <label>4% commission</label>
            </value>
            <value>
                <fullName>donor_tip</fullName>
                <label>Donor tip</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>