force-app/main/default/objects/Event__c/fields/Payment_notes__c.field-meta.xml
<CustomField>
    <fullName>Payment_notes__c</fullName>
    <label>Payment notes - For brief docs*</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>