force-app/main/default/objects/Event__c/fields/Payment_Profit__c.field-meta.xml
<CustomField>
    <fullName>Payment_Profit__c</fullName>
    <formula>Payment_fees__c - (Total_payments_collected__c *  Payment_Cost__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fintech Profit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>