force-app/main/default/objects/Event__c/fields/Payment_Revenue_Import__c.field-meta.xml
<CustomField>
    <fullName>Payment_Revenue_Import__c</fullName>
    <label>Payment Revenue (Import)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>