force-app/main/default/objects/Event__c/fields/Payment_status__c.field-meta.xml
<CustomField>
    <fullName>Payment_status__c</fullName>
    <label>Payment status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>TBC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>