force-app/main/default/objects/Event__c/fields/Platform_Fee_GLI_Jackpot_Raffle__c.field-meta.xml
<CustomField>
    <fullName>Platform_Fee_GLI_Jackpot_Raffle__c</fullName>
    <label>Platform Fee - 50:50 Raffle</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>