force-app/main/default/objects/Event__c/fields/Platform_Fee_Pledge__c.field-meta.xml
<CustomField>
    <fullName>Platform_Fee_Pledge__c</fullName>
    <label>Platform Fee - Pledge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>