force-app/main/default/objects/Event__c/fields/Pledge__c.field-meta.xml
<CustomField>
    <fullName>Pledge__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Donations feature selected in CMS</description>
    <inlineHelpText>Donations feature selected in CMS</inlineHelpText>
    <label>Donations Feature</label>
    <type>Checkbox</type>
</CustomField>