force-app/main/default/objects/Event__c/fields/Pledge_close__c.field-meta.xml
<CustomField>
    <fullName>Pledge_close__c</fullName>
    <label>Pledge Close*</label>
    <length>55</length>
    <type>Text</type>
</CustomField>