force-app/main/default/objects/Event__c/fields/Pledge_collected_by_Givergy__c.field-meta.xml
<CustomField>
    <fullName>Pledge_collected_by_Givergy__c</fullName>
    <label>Pledge - Collected by Givergy</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>