force-app/main/default/objects/Event__c/fields/Pledge_Custom_Notification__c.field-meta.xml
<CustomField>
    <fullName>Pledge_Custom_Notification__c</fullName>
    <label>Pledge Custom Notification*</label>
    <length>255</length>
    <type>Text</type>
</CustomField>