force-app/main/default/objects/Event__c/fields/Pledge_drive_start__c.field-meta.xml
<CustomField>
    <fullName>Pledge_drive_start__c</fullName>
    <label>Appeal Moment*</label>
    <length>100</length>
    <type>Text</type>
</CustomField>