force-app/main/default/objects/Event__c/fields/Pledge_payment_fee_recovered__c.field-meta.xml
<CustomField>
    <fullName>Pledge_payment_fee_recovered__c</fullName>
    <description>Pledge payment fee recovered (Pledge payment fee only)</description>
    <inlineHelpText>Pledge payment fee recovered (Pledge payment fee only)</inlineHelpText>
    <label>Pledge Fees Recovered</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>