force-app/main/default/objects/Event__c/fields/Post_event_payment_notes__c.field-meta.xml
<CustomField>
    <fullName>Post_event_payment_notes__c</fullName>
    <label>Post event payment notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>