force-app/main/default/objects/Event__c/fields/Postponement_Action2__c.field-meta.xml
<CustomField>
    <fullName>Postponement_Action2__c</fullName>
    <label>Postponement Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sent deadline email Feb/Mar 22</fullName>
            </value>
            <value>
                <fullName>Sales put on hold and in contact</fullName>
            </value>
            <value>
                <fullName>FEC put on hold and in contact</fullName>
            </value>
            <value>
                <fullName>Arranging new date - Q1 22</fullName>
            </value>
            <value>
                <fullName>Arranging new date - Q2 22</fullName>
            </value>
            <value>
                <fullName>Arranging new date - Q3 22</fullName>
            </value>
            <value>
                <fullName>Arranging new date - Q4 22</fullName>
            </value>
            <value>
                <fullName>Credit being moved to Unlimited Subscription</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>