force-app/main/default/objects/Event__c/fields/Postponement_Action__c.field-meta.xml
<CustomField>
    <fullName>Postponement_Action__c</fullName>
    <label>Postponement Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No additional fee charged, final invoice due 4 weeks before new date</fullName>
            </value>
            <value>
                <fullName>Cancellation fee charged</fullName>
            </value>
            <value>
                <fullName>Cancellation fee charged, free OA given</fullName>
            </value>
            <value>
                <fullName>Paying invoices on original invoice dates</fullName>
            </value>
            <value>
                <fullName>Paying invoices on original date, free OA given</fullName>
            </value>
            <value>
                <fullName>High item event no tech fee charged</fullName>
            </value>
            <value>
                <fullName>Switched to Givergy Virtual - No extra charge</fullName>
            </value>
            <value>
                <fullName>Switched to Givergy Virtual - Charged additional fee</fullName>
            </value>
            <value>
                <fullName>Switched to Premium Website - Final invoice credited</fullName>
            </value>
            <value>
                <fullName>Switched to Premium Website - Charge same amount</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>