force-app/main/default/objects/Event__c/fields/Postponement_Cancellation_fee__c.field-meta.xml
<CustomField>
    <fullName>Postponement_Cancellation_fee__c</fullName>
    <label>Postponement/ Cancellation fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>