force-app/main/default/objects/Event__c/fields/Pre_Launch_Event_System_Check__c.field-meta.xml
<CustomField>
    <fullName>Pre_Launch_Event_System_Check__c</fullName>
    <label>Pre-Launch / Event System Check</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes - Booked</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>