force-app/main/default/objects/Event__c/fields/Pre_Swipe__c.field-meta.xml
<CustomField>
    <fullName>Pre_Swipe__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pre Swipe (US Only)*</label>
    <type>Checkbox</type>
</CustomField>