force-app/main/default/objects/Event__c/fields/Preauth__c.field-meta.xml
<CustomField>
    <fullName>Preauth__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Pre-auth selected in CMS</description>
    <inlineHelpText>Pre-auth selected in CMS</inlineHelpText>
    <label>Pre-auth activated*</label>
    <type>Checkbox</type>
</CustomField>