force-app/main/default/objects/Event__c/fields/Predicted_Auction_Item_Profit__c.field-meta.xml
<CustomField>
    <fullName>Predicted_Auction_Item_Profit__c</fullName>
    <label>Predicted Auction Item Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>