force-app/main/default/objects/Event__c/fields/Predicted_Item_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Predicted_Item_Revenue__c</fullName>
    <label>Predicted Item Revenue</label>
    <length>18</length>
    <type>Text</type>
</CustomField>