force-app/main/default/objects/Event__c/fields/Previous_Year_Total_LRaised__c.field-meta.xml
<CustomField>
    <fullName>Previous_Year_Total_LRaised__c</fullName>
    <label>Total Raised (LY)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>