force-app/main/default/objects/Event__c/fields/Primary_CMS_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_CMS_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary CMS Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Events (Primary CMS Contact)</relationshipLabel>
    <relationshipName>Primary_CMS_Contact_Events</relationshipName>
    <type>Lookup</type>
</CustomField>