force-app/main/default/objects/Event__c/fields/Primary_Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_Number__c</fullName>
    <formula>IF(NOT(ISBLANK(Primary_Contact__r.MobilePhone)), 
Primary_Contact__r.MobilePhone, 
Primary_Contact__r.Phone
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Contact Number</label>
    <type>Text</type>
</CustomField>