force-app/main/default/objects/Event__c/fields/Privacy_Notice_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Privacy_Notice_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Information included in the Privacy Notice box in the CMS</description>
    <inlineHelpText>Information included in the Privacy Notice box in the CMS</inlineHelpText>
    <label>Privacy Notice Uploaded</label>
    <type>Checkbox</type>
</CustomField>