force-app/main/default/objects/Event__c/fields/Prize_Draw__c.field-meta.xml
<CustomField>
    <fullName>Prize_Draw__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Old Prize Draw feature selected in CMS</description>
    <inlineHelpText>Old Prize Draw feature selected in CMS</inlineHelpText>
    <label>Prize Draw Feature - Old</label>
    <type>Checkbox</type>
</CustomField>