force-app/main/default/objects/Event__c/fields/Prize_draw_actual__c.field-meta.xml
<CustomField>
    <fullName>Prize_draw_actual__c</fullName>
    <label>OLD Prize draw actual</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>