force-app/main/default/objects/Event__c/fields/Prize_Draw_Actual_New__c.field-meta.xml
<CustomField>
    <fullName>Prize_Draw_Actual_New__c</fullName>
    <label>Prize Draw Actual (New)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>