force-app/main/default/objects/Event__c/fields/Prize_draw_collected_by_Givergy__c.field-meta.xml
<CustomField>
    <fullName>Prize_draw_collected_by_Givergy__c</fullName>
    <label>OLD Prize draw - Collected by Givergy</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>