force-app/main/default/objects/Event__c/fields/Prize_Draw_Collected_by_Givergy_NEW__c.field-meta.xml
<CustomField>
    <fullName>Prize_Draw_Collected_by_Givergy_NEW__c</fullName>
    <label>Prize Draw - Collected by Givergy</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>