force-app/main/default/objects/Event__c/fields/Prize_Draw_Fees_Recovered__c.field-meta.xml
<CustomField>
    <fullName>Prize_Draw_Fees_Recovered__c</fullName>
    <label>Prize Draw Fees Recovered</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>