force-app/main/default/objects/Event__c/fields/Prize_Draw_Time__c.field-meta.xml
<CustomField>
    <fullName>Prize_Draw_Time__c</fullName>
    <label>Prize Draw Time*</label>
    <length>50</length>
    <type>Text</type>
</CustomField>