force-app/main/default/objects/Event__c/fields/Products_added__c.field-meta.xml
<CustomField>
    <fullName>Products_added__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Products added</label>
    <type>Checkbox</type>
</CustomField>